<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/ConfirmPasswordText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/RegUsernameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RegUsernameText"
        app:layout_constraintTop_toBottomOf="@+id/RegPasswordText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/RegUsernameText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/RegPasswordText"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/RegUsernameText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RegUsernameText"
        app:layout_constraintTop_toBottomOf="@+id/RegUsernameText" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="@+id/RegPasswordText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RegPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordText" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Back to"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/toLoginBtn"
        app:layout_constraintEnd_toEndOf="@+id/toLoginBtn"
        app:layout_constraintStart_toStartOf="@+id/toLoginBtn" />

    <TextView
        android:id="@+id/RegisterErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error_orange"
        app:layout_constraintStart_toStartOf="@+id/ConfirmPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordText" />

    <Button
        android:id="@+id/toLoginBtn"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/very_light_grey"
        android:text="Login"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>